--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,18 @@
 .btn-color{
   background-color: #00dbd0;
 }
+.main{
+	float:right;
+	width:70%;
+	padding:0 30px;
+	box-sizing: border-box;
+}
+
+.aside{
+	float:left;
+	width:30%;
+	/* background: #333;
+	color:#fff; */
+	/* padding:10px; */
+	box-sizing: border-box;
+}
